--- a/src/scss/components/_containers.scss
+++ b/src/scss/components/_containers.scss
@@ -20,6 +20,7 @@
 
   &.-no-header {
     clip-path: initial;
+    padding-top: 0;
   }
 
   h3 {
